2001-04-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (get_comics): Reverted code that creates
	the subdir name back to what it was before.

2001-04-26  Elliot Glaysher  <nuriko.chan@home.com>

	* Makefile (install): Fixed problems installing /etc/netomicsrc
	when packaging.
	* debian/conffiles: Added newline at the end of the file so debhelper
	doesn't barf on reading it.
	* debian/rules: Redefined PERLINSTDIR so that it places *.pm in a 
	places that Debian's perl looks for them.
	* Makefile (distclean): Added statement to remove manpages from the
	debian/ directory, where they are dumped before moving into the 
	packages.
	* Netcomics/Factory.pm (get_comics): Fixed bug that caused a directory
	to be created for EACH file.
	* debian/control: Fixed dependencies.
	* debian/netcomics.dirs: Removed old man instalation. Man page 
	installation is now done by dpkg.
	* debian/netcomics.files: Removed old man stuff, and explicitly
	declared "binaries"
	* debian/rules: We now use dh_installman to install the man pages
	instead of doing it man-ually. (pun intended.) Changed "make clean"
	to "make distclean" so each time a Debian package is built, it starts
	from scratch. 
	
2001-04-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* debian/rules (install): Changed to use NOREMAKE & BUILDROOT.
	* Makefile (modules): Changed Config.pm to Config.pm.in and added
	a rule for generating it.  Generalized all rules for substituting
	paths in template files.
	* Netcomics/Config.pm.in: moved Config.pm to this file.
	* Netcomics/Config.pm (processARGV): Fixed call to usage().
	* Netcomics/Factory.pm (dump_rli): Changed to delete unneeded
	fields only from completely download comics.
	(load_rlis): Redesigned to load in global & regular rli files so
	that load_rlis() could be removed to unduplicate code.
	(init): Adjusted code that was using load_rli() & load_rlis() to
	eliminate duplicated code.